# quran-renderer

./: .gitignore  BUILD_VERIFICATION_REPORT.md  CMakeLists.txt  README.md  build.gradle  build_linux.sh  local.properties  local.properties.template  settings.gradle
.github/workflows/: build-release.yml
android/: build.gradle  consumer-rules.pro  proguard-rules.pro
android/src/main/cpp/: CMakeLists.txt  quran_renderer_jni.cpp
android/src/main/java/org/digitalkhatt/quran/renderer/: QuranRenderer.kt
gradle/wrapper/: gradle-wrapper.properties
include/quran/: renderer.h
scripts/: build-android-skia.sh  build-android-so.sh  build-apple.sh  build-dependencies.sh  build-linux.sh  build-release.sh  deploy-android-libs.sh
src/core/: hb_skia_canvas.cpp  hb_skia_canvas.h  pages.json  quran.h  quran_metadata.h  quran_renderer.cpp  quran_renderer.cpp.patch  quranmetadata.json
tests/: CMakeLists.txt  test_landscape_spacing.cpp  test_spacing  test_spacing_standalone.c
tools/: render_dark_tajweed_test.cpp  render_text_test.cpp
